Rebranded to ArtifactorySCM, using Artifactory API to grab latest artifact version

--- a/src/main/webapp/url.html
+++ b/src/main/webapp/url.html
@@ -3,11 +3,7 @@
 	<br/>
 	The type detection of archive file is based on file name (i.e URL must end with zip,tar,tar.gz,jar,war,ear).
 	<br/>
-	The URL must end with a filename that is appropriate for the local filesystem, like 
+	The URL must be a path to the artifactory Project folder
 	<br/>
-	http://www.apache.org/dyn/closer.cgi/maven/binaries/apache-maven-3.0.4-bin.tar.gz
-	<br/>
-	file:///C:/Arjun/felix.jar (On Windows)
-	<br/>
-	file:///home/arjun/felix.jar (On Unix/Linux)
+	http://artifactory-endpoint.com/artifactory/reponame/teamname/repository-name/
 </div>
